tests/fixtures/invalid/str_gt_int.py
# Cannot compare with > Str and Int
x: bool = "hello" > 1
